# nifty-momentum-engine

./: .gitignore  ARCHITECTURE.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
config/: live.yaml  research.yaml
data/: nifty100_constituents.csv
output/live/: 2026-02-20_decision.csv
output/research/: 2026-02-20_backtest.csv
src/momentum_engine/: engine.py
src/momentum_engine/cli/: main.py
src/momentum_engine/core/: config.py
src/momentum_engine/data/: resampler.py  yahoo_fetcher.py
src/momentum_engine/decision/: decision_report.py  diagnostics.py
src/momentum_engine/portfolio/: equal_weight.py
src/momentum_engine/ranking/: cross_sectional_ranker.py
src/momentum_engine/research/: backtester.py  performance.py  snapshot.py
src/momentum_engine/signals/: momentum_12_1.py
src/momentum_engine/universe/: csv_universe.py  nifty100.py
